project(frontend-api)

find_package(Qt6 REQUIRED COMPONENTS Widgets)
add_definitions(-DFRONTEND_API_LIB -D_CRT_SECURE_NO_WARNINGS)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED YES)
set(CMAKE_AUTOMOC ON)
set(CMAKE_AUTOUIC ON)
set(CMAKE_AUTORCC ON)

file(GLOB_RECURSE css_files *.css *.qss)
file(GLOB_RECURSE frontend-api-SRC_FILES *.c *.cpp *.cxx *.cc *.mm)
file(GLOB_RECURSE frontend-api-HDR_FILES *.h *.hpp *.hxx *.hh)
file(GLOB_RECURSE frontend-api-UI_FILES *.ui)
file(GLOB_RECURSE frontend-api-QRC_FILES *.qrc)

source_group(TREE "${CMAKE_CURRENT_SOURCE_DIR}" PREFIX "Css Files" FILES ${css_files})
source_group(TREE "${CMAKE_CURRENT_SOURCE_DIR}" PREFIX "UI Files" FILES ${frontend-api-UI_FILES})
source_group(TREE "${CMAKE_CURRENT_SOURCE_DIR}" PREFIX "RC Files" FILES ${frontend-api-QRC_FILES})

add_library(frontend-api SHARED ${frontend-api-SRC_FILES} ${frontend-api-HDR_FILES} ${frontend-api-UI_FILES} ${frontend-api-QRC_FILES} ${css_files})
add_library(prism::frontend-api ALIAS frontend-api)
target_link_libraries(frontend-api Qt6::Widgets OBS::libobs OBS::frontend-api common-libs::utils-api common-libs::http-client common-libs::log common-libs::ui)
if(OS_WINDOWS)
target_include_directories(frontend-api PUBLIC ${CMAKE_SOURCE_DIR}/obs-studio/deps/w32-pthreads ${CMAKE_SOURCE_DIR}/obs-studio/deps/libcaption)
elseif(OS_MACOS)
target_include_directories(frontend-api PUBLIC ${CMAKE_SOURCE_DIR}/obs-studio/deps/libcaption)
endif()
set_target_properties(frontend-api PROPERTIES FOLDER prism/frontend)
set_target_properties(frontend-api PROPERTIES INTERFACE_INCLUDE_DIRECTORIES "${CMAKE_CURRENT_SOURCE_DIR}")
add_dependencies(frontend-api obs-build obs-copy)

prism_module(frontend-api "PRISM frontend API module")
if(OS_WINDOWS)
copy_prism_binary(frontend-api)
elseif(OS_MACOS)
copy_dylib_target(frontend-api)
endif()
